# finnhub-rs

./: .travis.yml  Cargo.toml
src/: client.rs  lib.rs  main.rs
