[package]
name = "finnhub"
version = "0.1.0"
authors = ["Adrien Thebo <adrien@lagrange-automation.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
clap = "2"
http = "0.1"
url = "2"
