[package]
name = "finnhub"
version = "0.1.0"
authors = ["Adrien Thebo <adrien@lagrange-automation.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap/" }
http = "0.1"
url = {version = "2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
